--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
     <a routerLink="/">Home</a>
     <a routerLink="/todo">TODO</a>
     <a routerLink="/characters">Characters</a>
+    <a routerLink="/contacts">Contact Book</a>
 </div>
 <router-outlet></router-outlet>
