--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
     <a routerLink="/characters">Characters</a>
     <a routerLink="/contacts">Contact Book</a>
     <a routerLink="/amiibos">Amiibos</a>
+  <a routerLink="/simple-form">Simple Form</a>
 </div>
 <router-outlet></router-outlet>
