--- a/src/app/individual-amiibo/individual-amiibo.component.html
+++ b/src/app/individual-amiibo/individual-amiibo.component.html
@@ -1,8 +1,8 @@
-<div class="amiibo">
+<div class="amiibo" >
     <div>
         <h1>{{ amiibo?.name }}</h1>
-        <p>Amiibo Series: <a routerLink="/amiibos">{{ amiibo?.amiiboSeries }}</a></p>
-        <p>Game Series: <a routerLink="">{{ amiibo?.gameSeries }}</a></p>
+        <p>Amiibo Series: <a routerLink="/amiibos" [queryParams]="{ amiiboSeries: amiibo?.amiiboSeries}">{{ amiibo?.amiiboSeries }}</a></p>
+        <p>Game Series: <a routerLink="/amiibos" [queryParams]="{ gameSeries: amiibo?.gameSeries}">{{ amiibo?.gameSeries }}</a></p>
         <p>Type: <a routerLink="/amiibos" [queryParams]="{ type: amiibo?.type  }">{{ amiibo?.type }}</a></p>
         <div>
             <h4>Released</h4>
@@ -14,3 +14,7 @@
     </div>
     <img src="{{ amiibo?.image }}" alt="{{ amiibo?.name }}">
 </div>
+pre
+<pre>
+  {{ amiibo | json }}
+</pre>
